# JARVIS

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_PHASE2.md  CHANGELOG_PHASE3.md  CHANGELOG_PHASE4.md  EDGE_CASES.md  PERFORMANCE.md  PHASE4_VERIFICATION.md  ROADMAP.md  VERSION.md  VERSION_HISTORY.md  VISION.md
Backend/: .gitignore  config.py  main.py  requirements.txt  run_e2e_test.py  test_agent.py  test_autonomous_m51.py  test_autonomous_m52.py  test_autonomous_m53.py  test_autonomous_m54.py  test_autonomous_m55.py  test_autonomous_m56.py  test_autonomous_soak.py  test_bridge_e2e.py  test_browser_launch.py  test_edge_cases.py  test_live_http.py  test_live_urls.py  test_memory_core.py  test_memory_graph.py  test_memory_ingestion.py  test_memory_phase4_e2e.py  test_memory_retrieval.py  test_memory_storage.py  test_observability.py  test_resolver_suite.py  test_resolver_verify.py  test_tools.py  test_verify_collision.py  test_window_tools.py  trace_execution.py
Backend/ai/: __init__.py
Backend/api/: __init__.py  autonomous.py
Backend/autonomous/: __init__.py  config.py  execution_engine.py  (+10 more)
docs/: architecture.md  memory_architecture.md  philosophy.md  vision_architecture.md
frontend/: .env.example  package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: config.rs  ipc.rs  lib.rs  manager.rs  monitor.rs  state.rs  supervisor.rs
frontend/src-tauri/src/desktop/: dispatcher.rs  mock.rs  mod.rs  permissions.rs  service.rs  windows.rs
(+108 files in other folders)
